06/27/08:
	- Moved libdeck to autotools.