@@ -1,2 +1,3 @@
 06/27/08:
+   - Implemented LibDeck_PokerCalcOdds
 	- Moved libdeck to autotools.
